--- a/views/formEdit.ejs
+++ b/views/formEdit.ejs
@@ -3,15 +3,15 @@
 <form action="/customers/<%= data.id %>/editProfile" method="POST">
     <div class="mb-3">
       <label class="form-label">ID Number</label>
-      <input type="text" class="form-control" name="identityNumber" value="<%= data.identityNumber %> " placeholder="input your id number">
+      <input type="text" class="form-control" name="identityNumber" value="<%= data.identityNumber %>" placeholder="input your id number">
     </div>
     <div class="mb-3">
       <label class="form-label">Full Name</label>
-      <input type="text" class="form-control" name="fullName" value="<%= data.fullName %> " placeholder="input your full name"> 
+      <input type="text" class="form-control" name="fullName" value="<%= data.fullName %>" placeholder="input your full name"> 
     </div>
     <div class="mb-3">
       <label class="form-label">Address</label>
-      <input type="text" class="form-control" name="address" value="<%= data.address %> " placeholder="input your address"> 
+      <input type="text" class="form-control" name="address" value="<%= data.address %>" placeholder="input your address"> 
     </div>
     <div class="mb-3">
       <label class="form-label">Birth Date</label>
@@ -30,6 +30,7 @@
     </div>
 
     <button type="submit" class="btn btn-primary">Save</button>
+    <a href="/customers" class="btn btn-danger">Back</a>
 </form>
 
 <%- include('./_partial/footer.ejs') %> 
