--- a/views/formRegister.ejs
+++ b/views/formRegister.ejs
@@ -30,6 +30,7 @@
     </div>
 
     <button type="submit" class="btn btn-primary">Register</button>
+    <a href="/customers" class="btn btn-danger">Back</a>
 </form>
 
 <%- include('./_partial/footer.ejs') %> 
